--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,9 @@
   "author": "Nero",
   "license": "MIT",
   "dependencies": {
-      "body-passer": "~1.18.2",
+      "body-parser": "^1.18.3",
       "debug": "~4.0.1",
-      "expres": "~4.15.5",
+      "express": "~4.16.3",
       "morgan": "~1.9.1",
       "moment": "~2.19.3",
       "multer": "~1.4.0",
