--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,7 @@
       "multer": "~1.4.0",
       "pg": "~7.4.3",
       "pg-native": "~3.0.0",
-      "node-xlsx": "~0.12.1"
-
+      "node-xlsx": "~0.12.1",
+      "async":"~2.6.1"
   }
 }
