--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: ./app
     ports:
       - "3001:3000"
+    depends_on:
+      - "postgres"
   postgres:
     image: "postgres"
     environment:
@@ -15,13 +17,13 @@ services:
       - ./postgres/db.sql:/docker-entrypoint-initdb.d/db.sql
     ports:
       - "5432:5432"
-  pgadmin:
-    image: "dpage/pgadmin4"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "nerocube.tw@gmail.com"
-      PGADMIN_DEFAULT_PASSWORD: "mypass"
-    links:
-      - postgres
-    ports:
-      - "5050:80"
+  # pgadmin:
+  #   image: "dpage/pgadmin4"
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: "nerocube.tw@gmail.com"
+  #     PGADMIN_DEFAULT_PASSWORD: "mypass"
+  #   links:
+  #     - postgres
+  #   ports:
+  #     - "5050:80"
     
